--- a/后台/css/log_index.css
+++ b/后台/css/log_index.css
@@ -20,30 +20,32 @@
 	color: white;
 }
 .div1{ 
-	width:18%;
+	width:20%;
 	float:left;
 }
 .div2{ 
-	width:82%;
-	height:700px;
+	width:80%;
 	border:1px solid #46A3FF;
 	float:left;
 }
+.div2_add{ 
+	width:80%;
+	border:1px solid #46A3FF;
+	float:left;
+	height:650px;
+}
 .div2_1{ 
-	width:82%;
-	height:1100px;
+	width:80%;
 	border:1px solid #46A3FF;
 	float:left;
 }
 .div2_2{ 
-	width:82%;
-	height:1700px;
+	width:80%;
 	border:1px solid #46A3FF;
 	float:left;
 }
 .div2_3{ 
-	width:82%;
-	height:1300px;
+	width:80%;
 	border:1px solid #46A3FF;
 	float:left;
 }
@@ -51,5 +53,6 @@
 	text-align: center;
 	font-size: 35px;
 	font-weight: bold;
-	margin-top: 10%;
+	margin-top: 19%;
+	margin-bottom: 60%;
 }
